maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: not found: value x
      if (aBiscuit(x,y)) {
                   ^ShortestPathMaze:6: error: not found: value y
      if (aBiscuit(x,y)) {
                     ^ShortestPathMaze:4: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (i <- 0 to h-1) {
         ^