maze.shortestpath.ShortestPathMaze.scala.code
def findBaggle() : (Int, Int) = {
  var (h, l) = (getMondeHauteur(), getMondeLargeur());
  for (i <- 0 to h-1) {
    for (j <- 0 to l-1) {
      if (aBiscuit(x,y)) {
        return (i,j);
      }
    }
  }
}

override def run() {
	findBaggle();
}